@@ -52,7 +52,8 @@ if ($s < 1 || $s > 8 || $d < 1 || $d > 8) {
   print "   where src and dest are network numbers between 1 and 8\n";
   exit();
 }
- 
+
+my $limit = int($r * $t);
 
 print "// Generated by make-udpgen.pl\n";
 
@@ -78,7 +79,7 @@ c0[1] -> tol;
 // pkt len is 42+payload length
 // so for 64 byte packets, use 22 byte payloads
 
-rs :: RatedSource(\\<00000000111111112222222233333333444444445555>, $r, $t);
+rs :: RatedSource(\\<00000000111111112222222233333333444444445555>, $r, $limit);
 rs -> udph
    -> ethh
    -> Counter
