@@ -36,7 +36,7 @@ BandwidthShaper::pull(int)
   if (now.tv_sec > _tv_sec) {
     _tv_sec = now.tv_sec;
     if (_count > 0)
-      _count -= _meter;
+      _count -= _rate;
   }
 
   unsigned need = (now.tv_usec << UGAP_SHIFT) / _ugap;
