@@ -5,7 +5,7 @@
 
 /*
  * =c
- * RatedSource([DATA, RATE, TIME, ACTIVE])
+ * RatedSource([DATA, RATE, LIMIT, ACTIVE])
  * =s
  * generates packets at specified rate
  * V<sources>
@@ -14,10 +14,10 @@
  * Creates packets consisting of DATA. Pushes RATE such packets out its single
  * output per second for a total of TIME seconds. It will send a maximum of
  * one packet per scheduling, so very high RATEs may not be achievable. Stops
- * sending after RATE*TIME packets are generated; but if TIME is negative,
+ * sending after LIMIT packets are generated; but if LIMIT is negative,
  * sends packets forever. Will send packets only if ACTIVE is true. (ACTIVE is
  * true by default.) Default DATA is at least 64 bytes long. Default RATE is
- * 10. Default TIME is -1 (send packets forever).
+ * 10. Default LIMIT is -1 (send packets forever).
  *
  * To generate a particular traffic pattern, use this element and RatedSource
  * in conjunction with PokeHandlers.
@@ -31,12 +31,11 @@
  * Returns the total number of packets that have been generated.
  * =h reset write-only
  * Resets the number of generated packets to 0. The RatedSource will then
- * generate another RATE*TIME packets (if it is active).
+ * generate another LIMIT packets (if it is active).
  * =h rate read/write
  * Returns or sets the RATE parameter.
  * =h limit read/write
- * Returns or sets the number of packets that will be sent. This number
- * starts out as RATE*TIME. Negative numbers mean send forever.
+ * Returns or sets the LIMIT parameter. Negative numbers mean no limit.
  * =h active read/write
  * Makes the element active or inactive.
  *
@@ -45,15 +44,18 @@
 
 class RatedSource : public Element { protected:
   
-  String _data;
-  unsigned _rate;
-  int _count;
-  int _limit;
+  static const unsigned UGAP_SHIFT = 12;
+  static const unsigned NO_LIMIT = 0xFFFFFFFFU;
+  
+  unsigned _count;
+  int _sec_count;
+  unsigned _limit;
+  int _tv_sec;
   unsigned _ugap;
+  unsigned _rate;
   bool _active;
   Packet *_packet;
-  struct timeval _start_time;
-  struct timeval _inactive_time;
+  String _data;
 
   static String read_param(Element *, void *);
   static int change_param(const String &, Element *, void *, ErrorHandler *);
